2010-05-25 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 2 released.

	* scripts/clush.py: Fixed missing support for group source (-s
	GROUPSOURCE) when using -a or -g GROUP.

	* scripts/nodeset.py: Added --all, -a support (also work is -s
	GROUPSOURCE). Almost-silently removed -a for --autostep, I hope nobody's
	using it. :)

	* Updated man pages of clush, clubak and nodeset to match latest options
	changes (trac #58).

	* scripts/clubak.py: Added regroup support to clubak (trac ticket #78).
	Added -S to specify user settable separator string (trac ticket #62).

2010-05-24 S. Thiell <stephane.thiell@cea.fr>

	* tests/NodeSetGroupTest.py: Some cleanup in tests (use setUp, tearDown)
	and create temporary groups test files.

	* tests/NodeSetRegroupTest.py: Removed (tests moved to
	NodeSetGroupTest.py).

	* scripts/nodeset.py: Add -N option to avoid display of group source
	prefix (trac ticket #79).

	* NodeSet.py: Add noprefix boolean option to regroup() to avoid building
	nodegroups with group source prefixes. Added test.

	* scripts/clush.py: Fix unhandled GroupResolverSourceError exception (part
	of trac ticket #74).

	* scripts/nodeset.py: Renamed -n NAMESPACE option to -s GROUPSOURCE (or
	--groupsource=GROUPSOURCE). Fixed trac ticket #76 so that -f, -e or -c
	take -s into account. Improved error handling (trac ticket #74). Added
	--groupsources command to list configured group sources (trac #77).

2010-05-20 S. Thiell <stephane.thiell@cea.fr>

	* tests/NodeSetRegroupTest.py: added tests for nodeset.regroup().

2010-05-19 S. Thiell <stephane.thiell@cea.fr>

	* doc/extras/vim/ftdetect/clustershell.vim: renamed clush.vim to
	clustershell.vim.

	* doc/extras/vim/syntax/clushconf.vim: renamed clush.vim to clushconf.vim
	and cleaned up old external groups keywords.

	* doc/extras/vim/syntax/groupsconf.vim: added vim syntax file for
	groups.conf (trac ticket #73).

2010-04-08 S. Thiell <stephane.thiell@cea.fr>
