@@ -66,7 +66,7 @@ Options:
         numerical cluster ranges, eg. 1,5,18-31.
     --groupsource, -s <GroupSource>
         Specify group source (ie. section to use in groups.conf(5)).
-    --noprefix, -N
+    --groupbase, -G
         Do not display group source prefix (always "@groupname").
     --separator=<string>, -S <string>
         Specify separator string for expanding nodesets (default: ' ').
@@ -149,16 +149,16 @@ def run_nodeset(args):
     class_set = NodeSet
     separator = ' '
     source = None
-    noprefix = False
+    groupbase = False
     progname = args[0]
     multcmds_errstr = "ERROR: multiple commands not allowed"
 
     # Parse getoptable options
     try:
-        opts, args = getopt.getopt(args[1:], "acdefhlqs:vrNRS:",
-            ["autostep=", "count", "debug", "expand", "fold", "groupsource=",
-             "groupsources", "help", "list", "noprefix", "quiet", "regroup",
-             "rangeset", "separator=", "version"])
+        opts, args = getopt.getopt(args[1:], "acdefhlqs:vrGRS:",
+            ["autostep=", "count", "debug", "expand", "fold", "groupbase",
+             "groupsource=", "groupsources", "help", "list", "quiet",
+             "regroup", "rangeset", "separator=", "version"])
     except getopt.error, err:
         if err.opt in [ "i", "intersection", "x", "exclude", "X", "xor" ]:
             message = "option -%s not allowed here" % err.opt
@@ -195,8 +195,8 @@ def run_nodeset(args):
             if command:
                 error_exit(progname, multcmds_errstr, 2)
             command = "list"
-        elif k in ("-N", "--noprefix"):
-            noprefix = True
+        elif k in ("-G", "--groupbase"):
+            groupbase = True
         elif k in ("-q", "--quiet"):
             verbosity = 0
         elif k in ("-r", "--regroup"):
@@ -230,7 +230,7 @@ def run_nodeset(args):
     # The list command doesn't need any NodeSet, check for it first.
     if command == "list":
         for group in grouplist(source):
-            if source and not noprefix:
+            if source and not groupbase:
                 print "@%s:%s" % (source, group)
             else:
                 print "@%s" % group
@@ -276,7 +276,7 @@ def run_nodeset(args):
         elif command == "fold":
             print xset
         elif command == "regroup":
-            print xset.regroup(source, noprefix=noprefix)
+            print xset.regroup(source, noprefix=groupbase)
         else:
             print len(xset)
 
